--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,22 @@ Web_Basic.txt
 # Ignore root gitignore only
 /.gitignore
 
+# Node.js
+node_modules/
+npm-debug.log
+yarn-error.log
+yarn.lock
+
+# Environment variables
+.env
+.env.local
+.env.production
+
+# Logs
+logs/
+*.log
+
+# OS
+.DS_Store
+Thumbs.db
+
